--- a/Views/Menu/Index.cshtml
+++ b/Views/Menu/Index.cshtml
@@ -1,7 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Menu principal";
+﻿@model IEnumerable<ModeloOrganizacional.Models.Topicos>
+@{
+    ViewData["Title"] = "Menu";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">@ViewData["Title"]</h1>
-</div>
+
+<h1>@ViewData["Title"]</h1>
+
+<p>
+    <a asp-action="Create">Novo</a>
+</p>
