--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,16 +22,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Index">Menu</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav align-content-end">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Cadastro">Cadastrar</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Menu" asp-action="Login">Logar</a>
-                        </li>
-                     </ul>
                 </div>
             </div>
+            <partial name="_LoginPartial"/>
         </nav>
     </header>
     <div class="container">
@@ -42,7 +35,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - ModeloOrganizacional - <a asp-area="" asp-controller="Menu" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - ModeloOrganizacional
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
