criado todos os views, modificado o controller p/ cada Topico responder p/ cada conta, mudado layout todo

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -27,11 +27,11 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Logar</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-dark">Logar</button>
                 </div>
                 <div>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registrar um usuário novo.</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="text-muted">Registrar um usuário novo.</a>
                     </p>
                 </div>
             </form>
