--- a/Views/Menu/Create.cshtml
+++ b/Views/Menu/Create.cshtml
@@ -3,7 +3,12 @@
     ViewData["Title"] = "Criar tópico";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<script src="https://cdn.tiny.cloud/1/pu6bc7jyabuh4pwedl4j56jdnt4iimyblx2pcd6cf006uuli/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script>
+    tinymce.init({
+        selector: '#mytextarea'
+    });
+</script>
 
 <h1>@ViewData["Title"]</h1>
 
@@ -20,19 +25,19 @@
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
-                <input asp-for="Descricao" class="form-control" />
+                <textarea id="mytextarea" asp-for="Descricao"></textarea>
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <hr />
             <div class="form-group">
-                <input type="submit" value="Adicionar" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-dark" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Voltar</a>
+    <a asp-action="Index" class="text-muted">Voltar para o Menu</a>
 </div>
 
 @section Scripts {
