--- a/Views/Menu/Index.cshtml
+++ b/Views/Menu/Index.cshtml
@@ -3,24 +3,33 @@
     ViewData["Title"] = "Menu";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .my-card {
+        margin-bottom: 20px;
+    }
+</style>
 
-
-<h1>@ViewData["Title"]</h1>
-
-<p>
-    <a asp-action="Create">Novo</a>
-</p>
-<div class="container">
-    @Html.DisplayNameFor(model => model.Titulo)
+<div class="d-grid">
+    <a asp-action="Create" class="btn btn-dark btn-block"><h3>Adicionar nova anotação</h3></a>
 </div>
-
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Titulo)
-            </td>
-        </tr>
-}
+<hr />
+<div class="container">
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-sm-4 pad">
+                <div class="card bg-light my-card">
+                    <div class="card-body">
+                        <h5 class="card-title">@Html.DisplayFor(modelItem => item.Titulo)</h5>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Editar</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-dark">Deletar</a>
+                        <a asp-action="Read" asp-route-id="@item.Id" class="btn btn-dark">Focar</a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
