--- a/Views/Menu/Read.cshtml
+++ b/Views/Menu/Read.cshtml
@@ -1,5 +1,27 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model ModeloOrganizacional.Models.Topicos
+
 @{
+    ViewData["Title"] = "Read";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<script src="https://cdn.tiny.cloud/1/pu6bc7jyabuh4pwedl4j56jdnt4iimyblx2pcd6cf006uuli/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script>
+    tinymce.init({
+        selector: '#mytextarea'
+    });
+</script>
+<div class="card text-center bg-dark text-white rounded">
+    <div class="card-body">
+        <h3 class="card-title">@Html.DisplayFor(model => model.Titulo)</h3>
+        <hr class="bg-white">
+        <p class="card-text">@Html.Raw(Model.Descricao)</p>
+        <hr class="bg-white" />
+        <a asp-action="Index" class="btn btn-light">Voltar para o Menu</a>
+    </div>
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
